--- a/pom.xml
+++ b/pom.xml
@@ -21,9 +21,9 @@
             <version>2.33</version>
         </dependency>
         <dependency>
-            <groupId>com.diogonunes</groupId>
-            <artifactId>JCDP</artifactId>
-            <version>2.0.3.1</version>
+            <groupId>com.googlecode.lanterna</groupId>
+            <artifactId>lanterna</artifactId>
+            <version>3.0.1</version>
         </dependency>
     </dependencies>
 
